[package]
name = "rust-dll-bp"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
bindings = {path = "bindings"}
windows = "0.19.0"
tokio = { version = "1.11.0", features = ["full"] }

