[package]
name = "rust-dll-bp"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
toy-arms = "0.1.0"
winapi = { version = "0.3.9", features = ["winuser", "wincon", "minwindef", "winnt", "libloaderapi", "consoleapi"] }

[[example]]
name = "use_toy_arms"
crate-type = ["cdylib"]